# leggedsnake

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.rst  MANIFEST.in  Makefile  README.md  TODO.md  environment.yml  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  versioning-test.yml  versionning-test.yml
docs/: .buildinfo  changeloglink.html  genindex.html  index.html  licenselink.html  objects.inv  py-modindex.html  readmelink.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/api/: dynamiclinkage.html  geneticoptimizer.html  physicsengine.html  utility.html  walker.html
docs/doctrees/: changeloglink.doctree  environment.pickle  index.doctree  readmelink.doctree
docs/doctrees/api/: dynamiclinkage.doctree  geneticoptimizer.doctree  physicsengine.doctree  utility.doctree  walker.doctree
docs/examples/: __init__.py  strider.py
docs/html/: .buildinfo  changeloglink.html  genindex.html  index.html  objects.inv  py-modindex.html  readmelink.html  search.html  searchindex.js
docs/html/_sources/api/: utility.rst.txt
docs/html/api/: dynamiclinkage.html  geneticoptimizer.html  physicsengine.html  utility.html  walker.html
docs/source/: conf.py  index.rst
docs/source/api/: dynamiclinkage.rst  geneticoptimizer.rst  physicsengine.rst  utility.rst  walker.rst
docs/source/examples/: __init__.py  strider.py
docs_src/: concepts.rst  conf.py  index.rst  migration_world_config.rst
docs_src/api/: co_design.rst  dynamic_linkage.rst  fitness.rst  gait_analysis.rst  gait_optimization.rst  genetic_optimizer.rst  hypergraph_physics.rst  leg_count.rst  nsga_optimizer.rst  physics_engine.rst  physicsengine.rst  plotting.rst  serialization.rst  show_evolution.rst  stability.rst  topology_optimization.rst  urdf_export.rst  walking_objectives.rst  world_visualizer.rst  worldvisualizer.rst
examples/: 01_walkers_gallery.ipynb  02_physics_and_fitness.ipynb  03_genetic_optimization.ipynb  04_multi_objective_and_gait.ipynb  05_topology_co_optimization.ipynb  06_export_and_share.ipynb  _build_notebooks.py  chebyshev_linkage.py  compare_linkages.py  discover_walker.ipynb  generate_readme_gifs.py  klann_linkage.py  optimization_pipeline.py  quick_demo.py  simple_fourbar.py  simple_walker.py  strider.py  theo_jansen.py  verify_mechanisms.py
examples/tools/: generate_readme_gifs.py  verify_mechanisms.py
leggedsnake/: __init__.py  dynamiclinkage.py  geneticoptimizer.py  physicsengine.py  show_evolution.py  utility.py  walker.py  worldvisualizer.py
leggedsnake/examples/: strider.py
leggedsnake/tests/: __init__.py  test_utility.py
source/: conf.py  index.rst
sphinx/source/: conf.py
src/leggedsnake/: __init__.py  _classical.py  _joint_adapters.py  co_design.py  dynamiclinkage.py  fitness.py  gait_analysis.py  gait_optimization.py  genetic_optimizer.py  geneticoptimizer.py  hypergraph_physics.py  leg_count.py  nsga_optimizer.py  physics_engine.py  physicsengine.py  plotting.py  serialization.py  show_evolution.py  stability.py  topology_optimization.py  urdf_export.py  utility.py  walker.py  walking_objectives.py  world_visualizer.py  worldvisualizer.py
tests/: test_buildable_fraction.py  test_co_design.py  test_dynamic_linkage.py  test_dynamiclinkage.py  test_fitness.py  test_fitness_gait_metrics.py  test_froude_and_cot.py  test_gait_analysis.py  test_gait_optimization.py  test_genetic_algorithm_optimization.py  test_genetic_optimizer.py  test_geneticoptimizer.py  test_ground_reaction_force.py  test_hypergraph_physics.py  test_integration.py  test_leg_count.py  test_nsga_optimizer.py  test_parallel_evaluation.py  test_performance_knobs.py  test_physics_engine.py  test_physicsengine.py  test_plotting.py  test_serialization.py  test_show_evolution.py  test_stability.py  test_terrain.py  test_topology_optimization.py  test_urdf_export.py  test_utility.py  test_walker.py  test_world_config_extensions.py  test_world_visualizer.py  test_worldvisualizer.py
