[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leggedsnake"
authors = [
    {name = "Hugo Farajallah", email = "leggedsnake@hugofara.net"},
]
description = "Simulate and optimize planar leg mechanisms using PSO and GA"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "linkage", "leg mechanism", "optimization",
    "leggedsnake", "walking linkage"
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy>=1.20.2",
    "tqdm>=4.40.0",
    "pylinkage>=0.8.0",
    "pymunk>=6.0.0",
    "pyglet>=2.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.0",
    "m2r2>=0.3.0",
    "bump2version>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://hugofara.net/leggedsnake-retro-ingeneering-evolution/"
Documentation = "https://hugofara.github.io/leggedsnake/"
Repository = "https://github.com/HugoFara/leggedsnake"
Changelog = "https://github.com/hugofara/leggedsnake/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "leggedsnake.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["leggedsnake*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv.sources]
pylinkage = { path = "../pylinkage", editable = true }

[tool.uv]
dev-dependencies = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.0",
    "m2r2>=0.3.0",
    "bump2version>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.9",
    "mypy>=1.0.0",
]

[tool.bumpversion]
current_version = "0.4.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "src/leggedsnake/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs_src/conf.py"
search = "release = '{current_version}'"
replace = "release = '{new_version}'"

[tool.mypy]
python_version = "3.10"
packages = ["leggedsnake"]
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pymunk.*",
    "pylinkage.*",
    "tqdm.*",
    "pyglet.*",
]
ignore_missing_imports = true
