[metadata]
name = leggedsnake
version = 0.1.0
author = Hugo Farajallah
description = Simulate and ptimize planar leg mechanisms using PSO and GA
license = MIT License
url = https://github.com/HugoFara/leggedsnake
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers = 
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = linkage, leg mechanism, optimization, leggedsnake, walking linkage
zip_safe = true

[options]
packages = leggedsnake
install_requires =
    numpy
    pygad
    pylinkage
test_suite = leggedsnake.tests
