[bumpversion]
current_version = 0.4.0
commit = False
tag = False

[metadata]
name = leggedsnake
version = attr: leggedsnake.__version__
author = Hugo Farajallah
author_email = leggedsnake@hugofara.net
description = Simulate and optimize planar leg mechanisms using PSO and GA
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = linkage, leg mechanism, optimization, leggedsnake, walking linkage
license = MIT License
url = https://hugofara.github.io/leggedsnake/
project_urls = 
	Changelog=https://hugofara.github.io/leggedsnake/changeloglink.html
	Source=https://github.com/HugoFara/leggedsnake
license_files = LICENSE.rst
classifiers = 
	Development Status :: 4 - Beta
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Artificial Life
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Environment :: Console
	Intended Audience :: Science/Research
	Intended Audience :: Legal Industry
	Intended Audience :: End Users/Desktop
	Operating System :: OS Independent

[options]
zip_safe = True
packages = leggedsnake
install_requires = 
	numpy
	tqdm
	matplotlib
	pylinkage
test_suite = tests
python_requires = >=3.7

[bumpversion:file:leggedsnake/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:source/conf.py]
search = release = '{current_version}'
replace = release = '{new_version}'
